.provarCaches/00D5h000009Q6XQEA0/objects/Order_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Order Line Item</label>
    <nameField>
        <label>Order Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>